# Spotifly

./: .gitignore  CHANGELOG.md  CLAUDE.md  ENVIRONMENT-SETUP.md  PLAN.md  README.md  RELEASE.md  Secrets.xcconfig.template  recently-played.json  release.sh
.claude/commands/: release.md
Scripts/: inject-env-to-plist.sh
Spotifly/: AudioSessionManager.swift  ContentView.swift  Info.plist  KeychainManager.swift  Spotifly-iOS.entitlements  Spotifly.entitlements  SpotiflyApp.swift  SpotifyAPI.swift  SpotifyAuth.swift  SpotifyConfig.swift  SpotifyPlayer.swift  SpotifySession.swift  WindowState.swift
Spotifly.xcodeproj/: project.pbxproj
Spotifly/Models/: NavigationDestination.swift
Spotifly/Spotifly.icon/: icon.json
Spotifly/SpotifyAPI/: APITypes.swift  SpotifyAPI+Albums.swift  SpotifyAPI+Artists.swift  SpotifyAPI+Player.swift  SpotifyAPI+Playlists.swift  SpotifyAPI+Search.swift  SpotifyAPI+Tracks.swift  SpotifyAPI+User.swift  SpotifyAPI.swift
Spotifly/Store/: AppStore.swift  Entities.swift  EntityConversions.swift
Spotifly/ViewModels/: AlbumsViewModel.swift  ArtistsViewModel.swift  AuthViewModel.swift  DevicesViewModel.swift  FavoritesViewModel.swift  NavigationCoordinator.swift  PlaybackViewModel.swift  PlaylistsViewModel.swift  QueueViewModel.swift  RecentlyPlayedViewModel.swift  SearchViewModel.swift  TrackLookupViewModel.swift
SpotiflyTests/: SpotiflyTests.swift
SpotiflyUITests/: SpotiflyUITests.swift  SpotiflyUITestsLaunchTests.swift
rust/: .gitignore  Cargo.toml  build.sh
rust/include/: spotifly_rust.h
rust/src/: lib.rs  oauth_success.html
(+46 files in other folders)
