[package]
name = "spotifly-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "spotifly_rust"
crate-type = ["staticlib"]

[dependencies]
librespot-core = "0.8"
librespot-metadata = "0.8"
librespot-playback = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
