[package]
name = "spotifly-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "spotifly_rust"
crate-type = ["staticlib"]

[dependencies]
librespot-core = "0.8"
librespot-metadata = "0.8"
librespot-playback = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true

# Use local patched librespot that spoofs iOS as macOS
# Spotify rejects iPhone platform identifiers, so we report as macOS x86_64
# See: https://github.com/librespot-org/librespot/issues/1399
[patch.crates-io]
librespot-core = { path = "../../librespot/core" }
librespot-metadata = { path = "../../librespot/metadata" }
librespot-playback = { path = "../../librespot/playback" }
librespot-audio = { path = "../../librespot/audio" }
librespot-oauth = { path = "../../librespot/oauth" }
librespot-protocol = { path = "../../librespot/protocol" }
librespot-discovery = { path = "../../librespot/discovery" }
